<resources>
    <string name="app_name">SearchMed</string>

    <string name="fechar">Fechar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>

    <string name="action_encontre_medico">Encontre Médicos</string>
    <string name="action_recomendacao">Avaliação</string>
    <string name="action_consultas">Consultas</string>
    <string name="action_consultas_agenda">Consultas na Agenda</string>
    <string name="action_consultas_agendadas">Consultas Do Dia</string>
    <string name="action_medicos_favoritos">Médicos Favoritos</string>
    <string name="action_medicos_exames">Exames</string>
    <string name="action_consultas_passadas">Consultas Passadas</string>
    <string name="action_ajustes">Ajustes</string>

    <string name="action_perfil">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Salvar</string>
    <string name="action_voltar">Voltar</string>

    <string name="label_meus_dados">Meus Dados</string>
    <string name="label_mais">Mais</string>
    <string name="label_dados_pessoais">Dados pessoais</string>
    <string name="label_redefinir_senha">Redefinir Senha</string>
    <string name="label_esqueci_senha">Esqueci minha senha</string>
    <string name="label_logff">Fazer Logoff</string>
    <string name="label_nome">Como deseja ser chamado?</string>
    <string name="label_email">E-mail</string>
    <string name="label_acesse">Acesse ao SearchMed</string>
    <string name="label_redefinir_senha_2">Digite abaixo uma nova senha...</string>
    <string name="label_criar_conta_primeiro">Criar conta</string>
    <string name="label_alterar_conta_primeiro">Alterar conta</string>
    <string name="label_presta_servico">Profissional Médico?</string>
    <string name="label_crm">Número CRM</string>
    <string name="label_senha">Senha</string>
    <string name="label_login">Login</string>

    <string name="label_favorito_add">Favorito</string>
    <string name="label_favorito_remove">Remover favorito</string>

    <string name="label_esqueceu_senha">Esqueçeu a Senha?</string>
    <string name="label_convenio_medico">Convenio Médico</string>
    <string name="label_senha_confirma">Confirma Senha</string>
    <string name="label_senha_atual">Senha Atual</string>
    <string name="label_senha_nova">Senha Nova</string>
    <string name="label_lembrete_senha">Lembrete de Senha</string>
    <string name="label_lembrete_senha_info">Caso tenha esquecido sua senha, digite o e-mail que você utilizou para se cadastrar no Home Help no espeço abaixo.</string>
    <string name="label_criar_nova_senha">Criar nova senha</string>
    <string name="label_especialidades">Especialidade</string>
    <string name="label_convenio">Convênios</string>
    <string name="label_horario">Horários</string>
    <string name="label_gps">Usar minha Localização</string>
    <string name="search_label">Procurar prestadores</string>
    <string name="search_hint">Procurar prestadores</string>
    <string name="label_prioridade">Prioridade</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_agendamento">Agendamento</string>
    <string name="label_observacao">Observação</string>
    <string name="label_abrir_consulta">Abrir Consulta</string>
    <string name="label_prioridade_normal">Normal</string>
    <string name="label_prioridade_urgente">Urgente</string>
    <string name="label_prioridade_muito_urgente">Muito Urgente</string>
    <string name="label_agendar">Agendar</string>
    <string name="label_rejeitar">Rejeitar</string>
    <string name="label_nota">Nota</string>
    <string name="label_recomendacao">Recomendação</string>
    <string name="label_classificar">Classificar</string>
    <string name="label_boa_vindas">Bem Vindo</string>
    <string name="label_boa_vindas_app">SearchMed</string>
    <string name="label_boa_vindas_pessoas">Encontre Profissionais Médicos</string>
    <string name="label_criar_conta">Criar minha conta</string>
    <string name="label_ja_sou_cadastrado">Já sou cadastrado</string>
    <string name="label_buscar_medico">Buscar Médico</string>
    <string name="label_valor_dinheiro">R$</string>
    <string name="label_endereco">Localização</string>
    <string name="label_especialidade_listar">Visualizar</string>
    <string name="label_especialidade_add">Adicionar</string>
    <string name="label_encontre_medico">Encontre o seu Médico</string>
    <string name="label_medicos_encontrados">Confira abaixo os Médicos encontrados...</string>

    <string name="title_activity_consulta_do_dia">Consulta</string>
    <string name="title_activity_consulta_aberta_paciente">Sua Consulta</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_meus_dados">Meus Dados</string>
    <string name="title_activity_redefinir_senha">Redefinir Senha</string>
    <string name="title_activity_lembrete_senha">Esqueci minha senha</string>
    <string name="title_activity_boas_vindas">Bem Vindo ao SearchMed</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_primeiro_acesso">Primeiro Acesso</string>
    <string name="title_activity_meus_dados_especialidade">Especialidades</string>
    <string name="title_activity_meus_dados_convenio">Convênios</string>
    <string name="title_activity_meus_dados_horarios">Horarios</string>
    <string name="title_activity_pesquisa">Médicos Encontrados</string>
    <string name="toast_favorito_adicionado">Médico favorito adicionado sucesso!</string>
    <string name="toast_add_exame">Exame adicionado com sucesso!</string>
    <string name="toast_remove_exame">Exame removido com sucesso!</string>
    <string name="toast_add_especialidade">Especialidade adicionada com sucesso!</string>
    <string name="toast_remove_especialidade">Especialidade removida com sucesso!</string>
    <string name="toast_add_convenio">Convênio adicionada com sucesso!</string>
    <string name="toast_remove_convenio">Convênio removido com sucesso!</string>
    <string name="toast_favorito_removido">Médico removido dos favoritos!</string>
    <string name="toast_consulta_descriao">Informe a descrição</string>
    <string name="toast_consulta_aberto">O agendamento da consulta foi realizado com sucesso!</string>
    <string name="toast_consulta_erro">Erro na tentativa de agendar a consulta.</string>
    <string name="toast_classificacao_recomendacao">Informe a recomendação!</string>
    <string name="toast_classificacao_aberta">Classificação realizada com sucesso!</string>
    <string name="toast_classificacao_erro">Erro ao classificar Profissional Médico!</string>
    <string name="toast_agendamento_realizado">Agendamento realizado com sucesso!</string>
    <string name="toast_senhas_vazias">Informe as senhas</string>
    <string name="toast_senhas_diferrentes">As senhas não são iguais</string>
    <string name="toast_informe_email">Informe o E-mail</string>
    <string name="toast_informe_nome">Informe o Nome</string>
    <string name="toast_informe_endereco">Informe o Endereço</string>
    <string name="toast_informe_crm">Informe o número do CRM</string>
    <string name="toast_informe_senha">Informe a senha</string>
    <string name="toast_erro_geral">Servidor indisponível</string>
    <string name="toast_login_invalido">Login inválido</string>
    <string name="load_carregando">Carregando</string>
    <string name="load_aguarde">Aguarde o carregamento...</string>
    <string name="toast_convenio">Informe o convênio</string>
    <string name="toast_especialidade">Informe a Especialidade</string>

    <string-array name="prioridade_array">
        <item>Normal</item>
        <item>Urgente</item>
        <item>Muito Urgente</item>
    </string-array>

    <string-array name="convenio_array">
        <item>Allianz</item>
        <item>Amil</item>
        <item>Asfal</item>
        <item>Assefaz</item>
        <item>Banco Central Saúde</item>
        <item>Bradesco Saúde</item>
        <item>Caixa</item>
        <item>Camed</item>
        <item>Capesaúde</item>
        <item>Cassi</item>
        <item>Copamed</item>
        <item>Dix - Amico</item>
        <item>Embratel</item>
        <item>Fachesf</item>
        <item>Fassincra</item>
        <item>Fisco Saúde</item>
        <item>Gama Saúde</item>
        <item>Geap</item>
        <item>Golden Cross</item>
        <item>Guia Saúde Web</item>
        <item>Hapvida</item>
        <item>Intermédica</item>
        <item>Mediservice</item>
        <item>Medplan</item>
        <item>Notredame Saúde</item>
        <item>Odonto Serv</item>
        <item>Particular</item>
        <item>Petrobras</item>
        <item>Porto Seguro</item>
        <item>Postal Saúde</item>
        <item>Saúde Excelsior</item>
        <item>Smile Saúde</item>
        <item>Unimed</item>
        <item>Uniodonto</item>
    </string-array>

    <string-array name="nota_array">
        <item>UM</item>
        <item>DOIS</item>
        <item>TREZ</item>
        <item>QUATRO</item>
        <item>CINCO</item>
        <item>SEIS</item>
        <item>SETE</item>
        <item>OITO</item>
        <item>NOVE</item>
        <item>DEZ</item>
    </string-array>









    <string-array name="foodTypes">
        <item>Normal</item>
        <item>Urgente</item>
        <item>Muito Urgente</item>
        <item>Grill</item>
        <item>Sea Food</item>
        <item>Salads</item>
        <item>Desserts</item>
        <item>Quick Meals</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer_fragment">NavigationDrawerFragmentActivity</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





</resources>
