<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="searchmedapp.MeusDadosActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableRow>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_alterar_conta_primeiro"
                android:id="@+id/textViewAcesse"
                android:textColor="@color/colorTitle"
                android:textSize="20dp"
                android:gravity="center|left"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome"
                style="@style/TabTextSearhMedTheme"
                android:id="@+id/textView4"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editNome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:id="@+id/textView5"
                style="@style/TabTextSearhMedTheme"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editEmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_endereco"
                style="@style/TabTextSearhMedTheme"
                android:id="@+id/textView10"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editEndereco" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_senha"
                android:id="@+id/textView7"
                style="@style/TabTextSearhMedTheme"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:id="@+id/editSenha" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_presta_servico"
                android:id="@+id/chkPrestaServico"
                style="@style/TabTextSearhMedTheme"
                android:onClick="onCheckPrestaServico"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_crm"
                android:id="@+id/lbCRM"
                style="@style/TabTextSearhMedTheme"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editCRM"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


