<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="searchmedapp.ConsultaFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_encontre_medico"
                android:id="@+id/textLabel_prioridade"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_margin="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_convenio_medico"
                android:id="@+id/textView7"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"/>

            <Spinner
                android:id="@+id/spinnerConvenio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:spinnerMode="dialog"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_especialidades"
                android:id="@+id/textView8"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"/>

            <Spinner
                android:id="@+id/spinnerEspecialidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:spinnerMode="dialog" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_buscar_medico"
                android:id="@+id/btnEncontreMedico"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listPrestadores" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
