<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="searchmedapp.BoasVindasActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textView10"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_boa_vindas"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="85dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_boa_vindas_pessoas"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout  android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_medico"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_criar_conta"
                    android:id="@+id/btnCriarConta"
                    android:layout_gravity="center_horizontal"
                    android:onClick="criarConta"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ja_sou_cadastrado"
                    android:id="@+id/btnJaSouCadastrado"
                    android:layout_gravity="center_horizontal"
                    android:onClick="jaSouCadastrado"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


