<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="searchmedapp.PerfilFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical"
        tools:context="searchmedapp.PerfilFragment">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_account_circle_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textUserPerfil" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_meus_dados"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="10dp" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:id="@+id/lstMeusDados" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mais"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="10dp" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:id="@+id/lstMais"
                    android:layout_weight="0.38" />

                <Button android:text="@string/label_logff"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/btnLogon"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>
